test/fail/M0028.mo
module X { public module Ya {} };
let _ : X.Y.t = ();
